--- a/modules/apache/templates/index.php.erb
+++ b/modules/apache/templates/index.php.erb
@@ -1,5 +1,5 @@
 <h1>This webpage is created using Puppet</h1>
-<h3>hostname: $trusted['hostname']</h3>
+<h3>hostname: <% $trusted['hostname'] %></h3>
 
 
 
